Add Rodney to acknowledgements

--- a/achds.tex
+++ b/achds.tex
@@ -1099,7 +1099,7 @@ This research has made use of NASA's Astrophysics Data System.  The
 Starlink software is an open-source project that is maintained by the
 Joint Astronomy Centre, Hawaii. I thank Peter Draper and David Berry
 for testing development releases of the new library. I thank David
-Berry, Danny Price and Mark Taylor for comments on the draft manuscript.
+Berry, Danny Price, Rodney Warren-Smith and Mark Taylor for comments on the draft manuscript.
 
 The source code for the new HDS library and the Starlink software
 (\ascl{1110.012}) is open-source and is available on Github at
