--- a/achds.bib
+++ b/achds.bib
@@ -1253,6 +1253,14 @@
   volume =       {in press},
 }
 
+@Article{2015Greenfield,
+  author =       {Perry Greenfield and Michael Droettboom and Erik Bray},
+  title =        "{ASDF: a new data format for astronomy}",
+  journal =      {Astron.\ Comp.},
+  year =         2015,
+  volume =       {in press}
+}
+
 @Article{2015Jenness,
   author =       {Tim Jenness and others},
   title =        "{Learning from 25 years of the extensible
