Thomas et al 2015 is now in press

--- a/achds.bib
+++ b/achds.bib
@@ -1279,7 +1279,7 @@
                   from FITS}",
   journal =      {Astron.\ Comp.},
   year =         2015,
-  volume =       {submitted},
+  volume =       {in press},
 }
 
 @ARTICLE{660194,
