Thomas et al 2015 now has a DOI and arXiv

--- a/achds.bib
+++ b/achds.bib
@@ -1279,6 +1279,9 @@
                   from FITS}",
   journal =      {Astron.\ Comp.},
   year =         2015,
+  archivePrefix ="arXiv",
+  eprint =       {1502.00996},
+  doi =          {10.1016/j.ascom.2015.01.009},
   volume =       {in press},
 }
 
