Tweak ASDF sentence

--- a/achds.tex
+++ b/achds.tex
@@ -1085,8 +1085,8 @@ be possible to consider allowing the HDS and HDF5 APIs to be used
 simultaneously on a single file. This has many attractions and
 provides a simple path to enhancing native applications. It also would
 mean it would be impossible to switch HDS from HDF5 to another format
-in the future. If the Advanced Scientific Data Format (ASDF)
-\citep{asdf,2015Greenfield} were to suddenly become popular in astronomy it would be
+in the future. If the Advanced Scientific Data Format
+\citep[ASDF;][]{asdf,2015Greenfield} were to suddenly become popular in astronomy it would be
 conceivable to investigate a port of the HDS API to ASDF. If HDF5
 identifiers had been used natively in the code this would be a
 significantly more complicated task. This is somewhat similar to the
