Bib file reformat

--- a/achds.bib
+++ b/achds.bib
@@ -1254,7 +1254,8 @@
 }
 
 @Article{2015Greenfield,
-  author =       {Perry Greenfield and Michael Droettboom and Erik Bray},
+  author =       {Perry Greenfield and Michael Droettboom and Erik
+                  Bray},
   title =        "{ASDF: a new data format for astronomy}",
   journal =      {Astron.\ Comp.},
   year =         2015,
