--- a/achds.tex
+++ b/achds.tex
@@ -1105,7 +1105,7 @@ modified.
 
 This research has made use of NASA's Astrophysics Data System.  The
 Starlink software is an open-source project that is maintained by the
-Joint Astronomy Centre, Hawaii. I thank Peter Draper and David Berry
+Joint Astronomy Centre, Hawaii \citep{2014ASPC..485..391C}. I thank Peter Draper and David Berry
 for testing development releases of the new library. I thank David
 Berry, Danny Price, Rodney Warren-Smith and Mark Taylor for comments on the draft manuscript.
 
