Note the version of HDF5 used for the tests

--- a/achds.tex
+++ b/achds.tex
@@ -920,7 +920,8 @@ HDF5ROOT  <HDFITS>
 
 When considering adoption of a new format it is important to
 consider any performance differences and whether the files use up
-differing amounts of storage.
+differing amounts of storage. These tests used HDF5 version 1.8.13 and
+a late 2014 version of HDSv4.
 
 \subsection{File Sizes}
 
