Actually use the \KAPPA macro

--- a/achds.tex
+++ b/achds.tex
@@ -944,7 +944,7 @@ AGI database & 35\,328 & 191\,664 & 5.43 & 4\,473 & 9\,689& 2.17  & 403\,608\\
 Parameter file & 5\,632 & 18\,600 & 3.30 & 745 & 1\,318 & 1.77 &  19\,800\\
 SCUBA-2 & 18\,712\,576 & 18\,796\,530 & 1.00 & 15\,530\,536 &
 15\,537\,267 & 1.00 & 14\,660\,769 \\
-Kappa logo & 406\,016 & 411\,272 & 1.01 & 30\,633 & 31\,123 & 1.02 & 53\,827\\
+\KAPPA\ logo & 406\,016 & 411\,272 & 1.01 & 30\,633 & 31\,123 & 1.02 & 53\,827\\
 \hline
 \end{tabular}
 \end{center}
@@ -975,7 +975,7 @@ Table~\ref{tab:size}. The files were generated as follows:
 \item A SCUBA-2 acquisition file \citep{2014SPIE.9153E..03B}, which contains
   lots of data as well as table structures and is written in a single operation.
 
-\item Kappa (\ascl{1403.022}) logo image consisting of a simple NDF
+\item \KAPPA\ (\ascl{1403.022}) logo image consisting of a simple NDF
   with WCS and FITS header.
 \end{enumerate}
 
