--- a/achds.bib
+++ b/achds.bib
@@ -318,6 +318,18 @@
   pages =        3,
 }
 
+@ARTICLE{1992StarB..10....8M,
+  author =       {{Meyerdierks}, H.},
+  title =        "{Spectroscopy with SPECDRE}",
+  journal =      {Starlink Bulletin},
+  year =         1992,
+  month =        oct,
+  volume =       10,
+  pages =        {8-9},
+  adsurl =       {http://adsabs.harvard.edu/abs/1992StarB..10....8M},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @Article{1992STARB..10...30L,
   author =       {Mike Lawden},
   title =        {Statistician's corner},
