--- a/achds.tex
+++ b/achds.tex
@@ -1119,6 +1119,8 @@ Starlink software is an open-source project that is maintained by the
 Joint Astronomy Centre, Hawaii \citep{2014ASPC..485..391C}. I thank Peter Draper and David Berry
 for testing development releases of the new library. I thank David
 Berry, Danny Price, Rodney Warren-Smith and Mark Taylor for comments on the draft manuscript.
+I thank the two referees for their comments on the paper and also
+their comments on how to improve the library.
 
 The source code for the new HDS library and the Starlink software
 (\ascl{1110.012}) is open-source and is available on Github at
