Note UKIRT writes HDS as well as JCMT

--- a/achds.tex
+++ b/achds.tex
@@ -231,7 +231,7 @@ late 1980s \citep{SSN27a}.
 HDS succeeded in its goal of forming the basis of the Starlink data
 reduction software packages (\ascl{1110.012}) and was and is being
 used at UK observatories for data acquisition and for data reduction
-pipelines \citep{2011tfa..confE..42J,2015A&C.....9...40J}. Its presence was
+pipelines \citep{2011tfa..confE..42J,2015A&C.....9...40J,2014ASPC..485..143B}. Its presence was
 pervasive within the Starlink software stack, being used for parameter
 storage in the ADAM system \citep{1992ASPC...25..126A} and in a
 graphics database system \citep{SUN48} in addition to storing
