--- a/achds.bib
+++ b/achds.bib
@@ -1156,6 +1156,22 @@
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@INPROCEEDINGS{2014ASPC..485..143B,
+  author =       {{Bell}, G.~S. and {Currie}, M.~J. and {Redman},
+                  R.~O. and {Purves}, M. and {Jenness}, T.},
+  title =        "{A New Archive of UKIRT Legacy Data at CADC}",
+  booktitle =    {Astronomical Data Analysis Software and Systems
+                  XXIII},
+  year =         2014,
+  series =       {ASP Conf.\ Ser.},
+  volume =       485,
+  editor =       {{Manset}, N. and {Forshay}, P.},
+  month =        may,
+  pages =        143,
+  adsurl =       {http://adsabs.harvard.edu/abs/2014ASPC..485..143B},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @INPROCEEDINGS{2014ASPC..485..391C,
   author =       {{Currie}, M.~J. and {Berry}, D.~S. and {Jenness},
                   T. and {Gibb}, A.~G. and {Bell}, G.~S. and {Draper},
