It's the importing of binary tables that benefits from tables
Not FITS benefitting.

--- a/achds.tex
+++ b/achds.tex
@@ -1087,7 +1087,7 @@ community can agree on a standard model for FITS to HDF5 conversion.
 Now that a functioning prototype exists and has been proven to work
 acceptably, we must consider the possibility of expanding the HDS API
 to take advantage of HDF5 features. In particular compound datatypes
-provide the prospect of native table access (FITS binary tables would
+provide the prospect of native table access (the import of FITS binary tables would
 benefit significantly from this), an updated slicing API could provide
 access to hyperslabs, and the ability to specify chunking size and the
 maximum expected size of a dataset could result in significant
