--- a/achds.tex
+++ b/achds.tex
@@ -959,7 +959,7 @@ the original file sizes.\footnote{All these tests were done using the
   default file access property list settings. Selecting the latest
   format, via \texttt{H5Pset\_libver\_bounds}, results in slightly
   smaller files for three of the four tests but a larger file in the
-  paameter file test. It has not yet been decided whether \new\ should
+  parameter file test. It has not yet been decided whether \new\ should
   adopt maximal backwards compatibility for files or always be on the cutting
   edge.}  A comparison is shown in
 Table~\ref{tab:size}. The files were generated as follows:
