--- a/achds.tex
+++ b/achds.tex
@@ -148,7 +148,7 @@ astronomy file format and library for over 30 years. Development of the library
 was frozen ten years ago when funding for Starlink was stopped and almost no-one
 remains who understands the implementation details. To ensure the
 long-term sustainability of the Starlink application software and to
-make the extensible N-Dimensional Data Format accessible to a
+make the extensible \emph{N}-Dimensional Data Format accessible to a
 broader range of users, we propose to re-implement the HDS library
 application interface as a layer on top of the Hierarchical Data
 Format version 5. We present an overview of the new implementation of
@@ -304,7 +304,7 @@ not sufficient step towards the applications supporting larger
 datasets, and most libraries and applications in Starlink will
 need to be updated to support 64-bit counters. HDS is the
 fundamental building block that has to be converted first, providing
-new APIs to allow both 32-bit and 64-bit application code to co-exist.
+new APIs to allow both 32-bit and 64-bit application software to co-exist.
 
 \subsection{Data Compression}
 
@@ -507,7 +507,7 @@ the approach and also highlight the areas where the data models or
 access models diverge. The previous version of HDS\footnote{Somewhat
   confusingly the library implementing version 4 of the file format is
   itself version 5} was version 4 so it
-was decided this version would be version 5.
+was decided that this version would be version 5.
 In the rest of this paper we use the shorthand
 \new\ to refer to the new library implementation and format, and \old\
 to refer to the current version of the HDS format and library.
@@ -529,7 +529,7 @@ to refer to the current version of the HDS format and library.
 In order to support both new and old file formats it was necessary for
 the new library to have access to a complete copy of the existing
 library. The HDF5-based library and the \old\ library are both
-standalone libraries that are linked in to a wrapper library that
+standalone libraries that are linked into a wrapper library that
 implements the public interface (see Fig.~\ref{fig:arch}). The versioned libraries can be
 configured to provide the public API but when used as part of the
 unified wrapper they are built with names that include the version
@@ -589,7 +589,7 @@ forwarding scheme to be changed relatively easily.
 
 As mentioned previously, a \locator\ is an opaque C \texttt{struct}
 containing information about a particular object in the HDS file. The
-size of of these structures differs between the two
+size of these structures differs between the two
 implementations and this required that a change be made to the Fortran
 interface of the HDS library. For historical reasons an HDS \locator\
 is stored in a Fortran character array with a length specified by the
@@ -652,7 +652,7 @@ the HDS C view of an array must agree with Fortran.
 
 HDF5 has no concept of arrays of structures so this facility is
 implemented entirely by the \new\ library. The containing group is
-created and within it are placed the number of groups corresponding to
+created and within it are placed a number of groups corresponding to
 the array size. Each of these groups is given a name that contains a
 root string chosen to deliberately be longer than the maximum allowed
 length of an HDS component, appended with the coordinates of the
@@ -732,7 +732,7 @@ GROUP "/" {
 \end{verbatim}
 \caption{Comparison of the HDS view of an HDF5 data file with the HDF5
   view.
-  (a) Listing of a HDSv5 file using the standard HDS tracing tool,
+  (a) Listing of an HDSv5 file using the standard HDS tracing tool,
   \textsc{hdstrace} \citep{SUN102}.
   (b) Listing of the HDF5 file corresponding to the HDS structures.
   The definition of the
@@ -767,7 +767,7 @@ that the file identifier returned will be different for each call to
 \texttt{H5Fopen} so it is important to determine which file
 identifiers are associated with the same file. Without accounting for
 this, critical locators may be annulled at the wrong time. Rather than
-attempt to guess what the HDF5 library has chosen to do by normalising
+attempt to guess what the HDF5 library has chosen to do by normalizing
 supplied filenames, the virtual file driver layer is queried to obtain
 the Unix file descriptor. All file identifiers with a shared file
 descriptor are queried before deciding whether a file should be
@@ -838,9 +838,9 @@ tuning parameter.
 
 As a test a 4\,GB dataset was loaded into the GAIA visualization tool
 \citep[][\ascl{1403.024}]{2009ASPC..411..575D}. With memory mapping enabled
-the image displayed within two seconds and the process only used a
+the image displayed within 2\,s and the process only used a
 fews tens of megabytes of memory. With memory mapping disabled it took
-about ten seconds to load the image and the process took 5\,GB of
+about 10\,s to load the image and the process took 5\,GB of
 memory.
 
 The ability to memory map at all requires that datasets are created in
@@ -936,7 +936,7 @@ a late 2014 version of HDSv4.
     are the sizes from using HDF5 native SHUFFLE/GZIP compression.
     The first two rows are from files that are continuously updated
     during processing; the remaining rows are from statically created
-    data sets. All files sizes are in bytes.}
+    datasets. All files sizes are in bytes.}
 \label{tab:size}
 \begin{center}
 \begin{tabular}{lrrcrrcr}
